Completed bibliography. Corrected some formlations in the section "The mind-body problem".
Change-Id: I99997c85ca1764f3d019b2031e1b07c17739df36

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -809,7 +809,7 @@ where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such as 
 
 \section{The mind-body problem}
 
-Since the end of the second World War and the translation of the intellectual center of the scientific community from Europe to the United States of America, materialism, i.e. the complete reduction of our experience of mind to physical-material processes, has become the philosophical conviction of mainstream physicists, although they still may have opposite religious beliefs as private persons. Of course, it doesn't make any doubt that the biological activity of human and similar animal brains is involved in the processing of external and internal stimuli, and it is reasonable to believe that conscious thinking consists, at the physical level, in a particularly long and intensive stimuli processing involving a kind of cross-validation through large parts of the neural network. Nevertheless, ``mind'', i.e. the form of our experience of the world, with our feelings, our body schema, memories seen with the mind's eye, melodies imagined in the mind's ear... is just not \textit{the same} as the neural activity of some body being anyhow hardly identifiable quantum physically. Determining the relation between these two realities is the essence of the mind-body problem, which has become the most various answers over the ages. The usual divergence points arise about the questions: Do both realities exist at all, or is one of them a mere illusion? Are they independent of each other and just exist as parallel realities, or are there divergences and a mutual influence in the one, the other or both directions? In this old debate, Quantum Field Theory introduces the new idea that a mutual influence doesn't have to be a deterministic causal influence but also could be a probabilistic one, so that neither ``mind'' nor ``body'' have to be kind of a subordinated slave of its counterpart, but retain to some extent a form of ``freedom'' under its influence. I think this idea should have the potential to take some heat out of the debate.
+Since the end of the second World War and the translation of the intellectual center of the scientific community from Europe to the United States of America, materialism, i.e. the complete reduction of our experience of mind to physical-material processes, has become the philosophical conviction of mainstream physicists, although they still may have opposite religious beliefs as private persons. Of course, it doesn't make any doubt that the biological activity of human and similar animal brains is involved in the processing of external and internal stimuli, and it is reasonable to believe that, at the physical level, conscious thinking is the emerging result of an intensive and highly parallelized information processing activity by the brain's neural network. Nevertheless, ``mind'', i.e. the form of our experience of the world, with our feelings, our body schema, memories seen with the mind's eye, melodies imagined in the mind's ear... is just not \textit{the same} as the neural activity of an individual body (which is anyhow hardly identifiable quantum physically). Determining the relation between these two realities is the essence of the mind-body problem, which has become the most various answers over the ages. The usual divergence points arise about the questions: Do both realities exist at all, or is one of them a mere illusion? Are they independent of each other and just exist as parallel realities, or are there divergences and a mutual influence in the one, the other or both directions? In this old debate, Quantum Field Theory introduces the new idea that a mutual influence doesn't have to be a deterministic causal influence but also could be a probabilistic one, so that neither ``mind'' nor ``body'' have to be kind of a subordinated slave of its counterpart, but retain to some extent a form of ``freedom'' under its influence. I think this idea should have the potential to take some heat out of the debate.
 
 \section{Individual mind}
 
@@ -1787,27 +1787,27 @@ We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \
 
 \bibitem{Collins1984} Collins, J. (1984). \htmladdnormallink{\textit{Renormalization: an introduction to renormalization, the renormalization group and the operator product expansion}}{http://www.cambridge.org/9780521311779}. Cambridge University Press, Cambridge (United Kingdom), 1984.
 
-\bibitem{Descartes1637} Descartes, R. (1637). \textit{Discours de la méthode pour bien conduire sa raison, et chercher la vérité dans les sciences}. Ian Maire, Leiden (Netherlands), 1637.
+\bibitem{Descartes1637} Descartes, R. (1637). \htmladdnormallink{\textit{Discours de la méthode pour bien conduire sa raison, et chercher la vérité dans les sciences}}{http://www.gutenberg.org/ebooks/13846}. Ian Maire, Leiden (The Netherlands), 1637. \htmladdnormallink{\textit{Discourse on the Method of Rightly Conducting One's Reason and of Seeking Truth in the Sciences}}{http://www.gutenberg.org/ebooks/59}. W. Blackwood and sons, London (United Kingdom), 1870.
 
-\bibitem{Einstein1916} Einstein, A. (1916). \textit{Über die spezielle und die allgemeine Relativitätstheorie}. Vieweg, Braunschweig, 1917. \htmladdnormallink{\textit{Relativity: The Special and General Theory}}{http://www.gutenberg.org/ebooks/5001}. Methuen \& Co. Ltd., London (United Kingdom), 1920.
+\bibitem{Einstein1916} Einstein, A. (1916). \textit{Über die spezielle und die allgemeine Relativitätstheorie}. Vieweg, Braunschweig (Germany), 1917. \htmladdnormallink{\textit{Relativity: The Special and General Theory}}{http://www.gutenberg.org/ebooks/5001}. Methuen \& Co. Ltd., London (United Kingdom), 1920.
 
 \bibitem{Feynman1964} Feynman, R. (1964). \htmladdnormallink{\textit{The Character of Physical Law: 6. Probability and uncertainty - the quantum mechanical view of nature}}{http://www.youtube.com/watch?v=aAgcqgDc-YM}. Messenger Lectures, Cornell University, Ithaca (New York, United States), 1964. The British Broadcasting Corporation, London (United Kingdom), 1965.
 
-\bibitem{Freedman2001} Freedman, W. L.; et al. (2001). \htmladdnormallink{\textit{Final Results from the Hubble Space Telescope Key Project to Measure the Hubble Constant}}{http://arxiv.org/abs/astro-ph/0012376v1}. Astrophysical Journal 553 (1): 47–72.
+\bibitem{Freedman2001} Freedman, W. L.; et al. (2001). \htmladdnormallink{\textit{Final Results from the Hubble Space Telescope Key Project to Measure the Hubble Constant}}{http://arxiv.org/abs/astro-ph/0012376v1}. The Astrophysical Journal 553 (1): 47–72, IOP Publishing, Bristol (United Kingdom), 2001.
 
 \bibitem{Hermanns1983} Hermanns, W. (1983). \textit{Einstein and the Poet: In Search of the Cosmic Man}. Branden Press, Boston (Massachusetts, United States), 1983.
 
-\bibitem{Kogut1993} Kogut, A.; et al. (1993). \htmladdnormallink{\textit{Dipole Anisotropy in the COBE Differential Microwave Radiometers First-Year Sky Maps}}{http://arxiv.org/abs/astro-ph/9312056v1}. Astrophysical Journal 419: 1–6.
+\bibitem{Kogut1993} Kogut, A.; et al. (1993). \htmladdnormallink{\textit{Dipole Anisotropy in the COBE Differential Microwave Radiometers First-Year Sky Maps}}{http://arxiv.org/abs/astro-ph/9312056v1}. The Astrophysical Journal 419: 1–6, IOP Publishing, Bristol (United Kingdom), 1993.
 
-\bibitem{Komatsu2010} Komatsu, E.; et al. (2010). \htmladdnormallink{\textit{Seven-Year Wilkinson Microwave Anisotropy Probe (WMAP) Observations: Cosmological Interpretation}}{http://arxiv.org/abs/1001.4538v2}. Astrophysical Journal Supplement Series 192: 18, 2011.
+\bibitem{Komatsu2010} Komatsu, E.; et al. (2010). \htmladdnormallink{\textit{Seven-Year Wilkinson Microwave Anisotropy Probe (WMAP) Observations: Cosmological Interpretation}}{http://arxiv.org/abs/1001.4538v2}. The Astrophysical Journal Supplement Series 192: 18, IOP Publishing, Bristol (United Kingdom), 2011.
 
-\bibitem{Marin2009} Marin, J. M. (2009). \htmladdnormallink{\textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}}{http://harvard.academia.edu/JuanMiguelMarin/Papers/204341}. European Journal of Physics 30: 807-822, 2009.
+\bibitem{Marin2009} Marin, J. M. (2009). \htmladdnormallink{\textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}}{http://harvard.academia.edu/JuanMiguelMarin/Papers/204341}. European Journal of Physics 30: 807-822, IOP Publishing, Bristol (United Kingdom), 2009.
 
-\bibitem{Neumann1932} Neumann, J. v. (1932). \textit{Mathematische Grundlagen der Quantenmechanik}. Julius Springer, Berlin, 1932. \textit{Mathematical Foundations of Quantum Mechanics}. Princeton University Press, Princeton (New Jersey, United States), 1955.
+\bibitem{Neumann1932} Neumann, J. v. (1932). \textit{Mathematische Grundlagen der Quantenmechanik}. Julius Springer, Berlin (Germany), 1932. \textit{Mathematical Foundations of Quantum Mechanics}. Princeton University Press, Princeton (New Jersey, United States), 1955.
 
-\bibitem{Rabin1981} Rabin, J. M. (1981). \htmladdnormallink{\textit{Long Range Interactions In Lattice Field Theory}}{http://www.slac.stanford.edu/pubs/slacreports/slac-r-240.html}. Ph.D. Thesis. SLAC-0240.
+\bibitem{Rabin1981} Rabin, J. M. (1981). \htmladdnormallink{\textit{Long Range Interactions In Lattice Field Theory}}{http://www.slac.stanford.edu/pubs/slacreports/slac-r-240.html}. Ph.D. Thesis SLAC-0240, Stanford (California, United States), 1981.
 
-\bibitem{Spinoza1677} Spinoza, B. (1677). \htmladdnormallink{\textit{The Ethics (Ethica Ordine Geometrico Demonstrata)}}{http://www.gutenberg.org/ebooks/3800}.
+\bibitem{Spinoza1677} Spinoza, B. (1677). \textit{Ethica, Ordine Geometrico demonstrata}. Amsterdam (The Netherlands), 1677. \htmladdnormallink{\textit{The Ethics}}{http://www.gutenberg.org/ebooks/3800}. London (United Kingdom), 1883.
 
 \end{thebibliography}
 
