Corrected typo in section "One particle states".
Change-Id: I473334acb121374d28ee37e0737548ebc383020f

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -385,7 +385,7 @@ Deriving such a relation, however, isn't the goal of this book.
 
 \section{One particle states}
 
-\paragraphtitle{Particle types} We don't make in this chapter any assumption about the existing particle types, e.g. electrons, positrons an photons. We are noting them $\pt$ in a generic way. The corresponding spin states $\sp$ depend implicitely, in the notations, on the particle type. The spin state influences the way a particle interacts with other particle fields; this effect is described quantitatively in the expression of the spinor operators in appendix \ref{Photon spinors} and \ref{Dirac spinors}.
+\paragraphtitle{Particle types} We don't make in this chapter any assumption about the existing particle types, e.g. electrons, positrons and photons. We are noting them $\pt$ in a generic way. The corresponding spin states $\sp$ depend implicitely, in the notations, on the particle type. The spin state influences the way a particle interacts with other particle fields; this effect is described quantitatively in the expression of the spinor operators in appendix \ref{Photon spinors} and \ref{Dirac spinors}.
 
 \paragraphtitle{Definition} The (hypothetical) physical state $\ket{\Psi}$ in which the universe only contains a single particle, of type $\pt$, at point $\n$ and in the spin state $\sp$, is written:
 \begin{equation*}
