Added section 'The role of consciousness' (incomplete for now)

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -943,9 +943,10 @@ In particular, if $\left| H'_{f + (\delta \q_j),i} \right|^2$ admits such a cont
 && \left( (1 + 2 \N) \frac \a \h \right)^{3 n_f} \dtp_1 \dotsm \dtp_{n_f}
 \end{eqnarray*}
 
-\section{Quantum Measurement}
+\section{Quantum measurement}
+\label{Quantum measurement}
 
-Let us consider a simple thought experiment in order to illustrate how measurement processes take place: An excited atom, decaying by emitting a photon detected by a photomultiplicator, which is read by an observer. In the initial state, at time $t_0$, the atom has just been switched to its excited state and hasn't decayed yet, the measurement apparatus is indicating that it hasn't detected any photon yet and the observer is waiting for the detector to get activated. We symbolize this situation by:
+Let us consider a simple thought experiment in order to illustrate how measurement processes take place: An excited atom, decaying by emitting a photon detected by a photomultiplier, which is read by an observer. In the initial state, at time $t_0$, the atom has just been switched to its excited state and hasn't decayed yet, the measurement apparatus is indicating that it hasn't detected any photon yet and the observer is waiting for the detector to get activated. We symbolize this situation by:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \end{flushleft}
@@ -955,7 +956,7 @@ The decay of the excited atom into a stable atom and a photon first brings it in
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\Photon\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \end{flushleft}
-Supposing, to simplify, that the photomultiplicator has a detection efficiency of 100\%, the detector gets then with certainty activated by the incoming photon, coming thus at time $t_0 + \Delta t$ into a quantum superposition of states, where all three states coexist as a linear combination within the physical state $\ket{\psi}$ of the universe. In all three cases, the observer is still waiting. We symbolize this situation by:
+Supposing, to simplify, that the photomultiplier has a detection efficiency of 100\%, the detector gets then with certainty activated by the incoming photon, coming thus at time $t_0 + \Delta t$ into a quantum superposition of states, where all three states coexist as a linear combination within the physical state $\ket{\psi}$ of the universe. In all three cases, the observer is still waiting. We symbolize this situation by:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \hspace*{3mm}\Superposition\hspace*{3mm}
@@ -1025,9 +1026,15 @@ The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be `
 
 \section{The role of consciousness}
 
-\section{Epistemological considerations}
+As it results from the preceding description of the processes taking place in the evolution of the state of God, not only the purely physical processes described by the Hamiltonian evolution operator $\op U_\tau$, but also the mental processes described by the collapse operators $(\op{\Pi}_\cms)$ play a central role in the evolution of the physical state $\ket \Psi$ of the universe. In the following, we will call `consciousness state' any collective mind state $\cms$ and `consciousness' the phenomenon of experiencing it.This phenomenon must be very carefully distinguished from the purely physical processes of conscious thinking happening at the neural level within brains, although both are closely related to each other.
 
-\section{The Spinozist approach to Quantum Physics}
+Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that physical processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any individual mind state $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the physical level. This inadequacy between our mental categories and the physical reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the physical reality (even a partial one), because physical reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current physical state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the physical state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the physical state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the physical reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the physical state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the physical reality according to its own mental categories!
+
+
+
+%\section{Epistemological considerations}
+
+%\section{The Spinozist approach to Quantum Physics}
 
 %TODO Physical issues
 %\chapter{Physical issues}
