--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -297,17 +297,17 @@ Sébastien Fauvel
 
 \section*{Interpreting Quantum Field Theory}
 
-The birth of Quantum Physics in the 1920s has been marked by a long period of intense controversies about its interpretation, which has been recently reviewed by Juan Miguel Marin in his paper \textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}~\cite{Marin2009}. The Copenhagen interpretation which emerged from these debates is dominating the scene since the 1950s-1960s, not because it is intrinsically better than others, but because it seems to challenge the materialist world view of classical, `everyday' physics as little as possible. Since the 1970s, however, numerous alternative interpretations have been proposed and further developed: Pilot-Wave Theory, Dynamical Collapse Theories, Many-Worlds interpretation, Many-Minds interpretation, Decoherent Histories... All these attempts to give Quantum Physics a sound interpretation are facing the problem that the mathematical theory itself, in the form of the Standard Model of Quantum Field Theory (or of slight variants regarding the existence of the Higgs field, of neutrino masses...), is ill-defined, and that it is therefore impossible to assign a physical or metaphysical meaning to the fundamental mathematical entities of the theory, i.e. to define an ontology. Of course, it is possible to choose a specific, mathematically well-defined regularization of the theory for this purpose, but since renormalization methods are leading, in the singular limit of the original theory, to the same results for different regularization schemes, we don't know which regularization is the right one, and as a consequence we don't know either which are the fundamental mathematical entities to be interpreted. Quite surprisingly, however, it seems that this issue has never been seriously accounted for yet. Existing interpretations of Quantum Physics are either restricted to non-relativistic Quantum Mechanics, which is no fundamental theory, or are formulated so vaguely that they are hardly more than the mere idea of an interpretation, which has made most physicists doubt that such an interpretation is possible at all. This book will have reached his goal if it convinces the reader of the contrary and helps interpretation issues recovering again their place at the heart of the research on Quantum Field Theory. For this purpose, I shall take as an example a lattice regularization scheme, formulate in this well-defined framework a rather conservative interpretation inspired by Spinoza's philosophy and show that classical philosophical questions can be formulated as simple physical hypotheses in the frame of the resulting naturalistic metaphysics.
+The birth of Quantum Physics in the 1920s has been marked by a long period of intense controversies about its interpretation, which has been recently reviewed by Juan Miguel Marin in his paper \textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}~\cite{Marin2009}. The Copenhagen interpretation which emerged from these debates is dominating the scene since the 1950s-1960s, certainly not because it is intrinsically better than others, but because it seems to challenge the materialist world view of classical, `everyday' physics as little as possible. Since the 1970s, however, numerous alternative interpretations have been proposed and further developed: Pilot-Wave Theory, Dynamical Collapse Theories, Many-Worlds interpretation, Many-Minds interpretation, Decoherent Histories... All these attempts to give Quantum Physics a sound interpretation are facing the problem that the mathematical theory itself, in the form of the Standard Model of Quantum Field Theory (or of slight variants regarding the existence of the Higgs field, of neutrino masses...), is still ill-defined, and that it is therefore impossible to assign a physical or metaphysical meaning to the fundamental mathematical entities of the theory, i.e. to define an ontology. Of course, it is possible to choose a specific, mathematically well-defined regularization of the theory for this purpose, but since renormalization methods are leading, in the singular limit of the original theory, to the same results for different regularization schemes, we don't know which regularization is the right one, and as a consequence we don't know either which are the fundamental mathematical entities to be interpreted. Quite surprisingly, however, it seems that this issue has never been seriously accounted for yet. Existing interpretations of Quantum Physics are either restricted to non-relativistic Quantum Mechanics, which is no fundamental theory, or are formulated so vaguely that they are hardly more than the mere idea of an interpretation, which has made many physicists doubt that such an interpretation is possible at all. This book will have reached his goal if it convinces the reader of the contrary and helps interpretation issues recovering again their place at the heart of the research on Quantum Field Theory. For this purpose, I shall take as an example a lattice regularization scheme, formulate in this well-defined framework a rather conservative interpretation inspired by Spinoza's philosophy and show that classical philosophical questions can be formulated as simple physical hypotheses in the frame of the resulting naturalistic metaphysics.
 
 \section*{Philosophical motivation}
 
-Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which would be highly desirable but is thought to be technically impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis. The theory cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
+Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which would be highly desirable but is thought to be technically impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis. The theory cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues, describe very precisely the form of the relation between mind and body according to Quantum Physics and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
 
 \footnotetext[1]{Precisely, one requires that the classical Lagrangian used in the heuristical construction of the theory be Poincaré invariant and describes local (contact) interactions of point particles in the Minkowski space-time.}
 
 \section*{Abstract}
 
-In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a physical and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by a set of a various number of individual minds with definite conscious thoughts. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single individual mind (which we're used to call ``our'' mind), and must communicate with others in order to get closer to an adequate representation of the mental world as a whole. Communication happens in the physical world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective mental experience. This physical world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies as they may exist for individual minds. A state of this physical world is given by a quantum superposition of so-called localized states, which are given by the number of particles of each kind (e.g. 1 spin down positron and 4 right-handed circularly polarized photons) at each point of space. Each physical state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the physical world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final physical state defines a probability law according to which a mental state is being selected and becomes collectively experienced. Finally, the component of the physical state corresponding to the selected mind state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between the conscious thoughts of individual minds and some physical processes happening in the corresponding physical states, e.g. the biological processes of consciousness within a human brain.
+In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a physical and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by a set of a various number of individual minds with definite conscious thoughts. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single individual mind (which we're used to call ``our'' mind), and must communicate with others in order to get closer to an adequate representation of the mental world as a whole. Communication happens in the physical world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective mental experience. This physical world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies as they may exist for individual minds. A state of this physical world is given by a quantum superposition of so-called localized states, which are given by the number of elementary particles of each kind present at each point of space. Each physical state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the physical world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final physical state defines a probability law according to which a mental state is being selected and becomes collectively experienced. Finally, the component of the physical state corresponding to the selected mind state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between the conscious thoughts of individual minds and some physical processes happening in the corresponding physical states, e.g. the biological processes of consciousness within a human brain.
 
 \section*{Overview}
 
@@ -341,9 +341,7 @@ The aim of this chapter is to develop a well-defined, divergence-free mathematic
 
 \paragraphtitle{Remarks} This constant is supposed to be a ``huge'' integer ($\gtrsim~10^{46}$) which hasn't been measured experimentally yet. The finiteness of space is one of the conditions of the finite dimensionality of the Hilbert space of the physical states, which will be defined in section \ref{Many particles states}. This is in turn a necessary condition of the well-definedness of the evolution equation \ref{Schrödinger equation} for an arbitrary Hamiltonian operator. It is therefore a theoretical necessity, which I shall assume although this fact hasn't been proved experimentally yet.
 
-\paragraphtitle{Commentaries} No notion of distance emerges from this definition of space. Indeed, according to the ideas developed in Einstein's vulgarization work \textit{Relativity: The Special and General Theory}~\cite{Einstein1916}, we consider that distance and duration are actually no fundamental notions but have to be defined on an empirical basis. Distance and duration are measured using physical apparatus like rods or clocks, and their theoretical definition must rely on a theoretical modeling of these apparatus and of the observer making use of them.
-%In the context of classical mechanics in which the Relativity Theory has been developed, and at the astronomical scale of the phenomena described by General Relativity, it has been sufficient to model observers by idealized point masses equipped with such apparatus, which aren't modeled more closely. The points of space-time in Relativity Theory should therefore be identified as macroscopic models of observers and shouldn't be identified with ; in the frame of quantum physics, however,  
-These concepts will emerge from the evolution equation \ref{Schrödinger equation} and from the expression of the Hamiltonian operator defined in sections \ref{Kinetic energy Hamiltonian} and \ref{QED interaction Hamiltonian}. According to this expression, we will see that space has a toroidal structure, i.e. that opposite points on the boundary of the lattice $\FL$ are actually nearest neighbors. This boundary is also a mere artifact, like the boundary of a world map, and doesn't represent in any way the ``frontier of the universe''. The physical constant $\a$ in the expression of the interaction Hamiltonian plays the role of the lattice step, i.e. of the distance between nearest neighbors. It is supposed to be very small ($\lesssim~10^{-20}~\mathrm m$) and hasn't been measured experimentally yet.
+\paragraphtitle{Commentaries} No notion of distance emerges from this definition of space. Indeed, according to the ideas developed in Einstein's vulgarization work \textit{Relativity: The Special and General Theory}~\cite{Einstein1916}, we consider that distance and duration are actually no fundamental notions but have to be defined on an empirical basis. Distance and duration are measured using physical apparatus like rods or clocks, and their theoretical definition must rely on a theoretical modeling of these apparatus and of the observer making use of them. These concepts will emerge from the evolution equation \ref{Schrödinger equation} and from the expression of the Hamiltonian operator defined in sections \ref{Kinetic energy Hamiltonian} and \ref{QED interaction Hamiltonian}. According to this expression, we will see that space has a toroidal structure, i.e. that opposite points on the boundary of the lattice $\FL$ are actually nearest neighbors. This boundary is also a mere artifact, like the boundary of a world map, and doesn't represent in any way the ``frontier of the universe''. The physical constant $\a$ in the expression of the interaction Hamiltonian plays the role of the lattice step, i.e. of the distance between nearest neighbors. It is supposed to be very small ($\lesssim~10^{-20}~\mathrm m$) and hasn't yet been measured experimentally either.
 
 \paragraphtitle{Complements} We could equivalently postulate that, in the Minkowski space-time $(\ST,\stt g)$, defined by:
 \begin{eqnarray*}
@@ -1028,9 +1026,7 @@ The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be `
 
 As it results from the preceding description of the processes taking place in the evolution of the state of God, not only the purely physical processes described by the Hamiltonian evolution operator $\op U_\tau$, but also the mental processes described by the collapse operators $(\op{\Pi}_\cms)$ play a central role in the evolution of the physical state $\ket \Psi$ of the universe. In the following, we will call `consciousness state' any collective mind state $\cms$ and `consciousness' the phenomenon of experiencing it.This phenomenon must be very carefully distinguished from the purely physical processes of conscious thinking happening at the neural level within brains, although both are closely related to each other.
 
-Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that physical processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any individual mind state $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the physical level. This inadequacy between our mental categories and the physical reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the physical reality (even a partial one), because physical reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current physical state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the physical state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the physical state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the physical reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the physical state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the physical reality according to its own mental categories!
-
-
+Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that physical processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any individual mind state $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the physical level. This inadequacy between our mental categories and the physical reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the physical reality (even a partial one), because physical reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current physical state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the physical state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the physical state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the physical reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the physical state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the physical reality according to its own mental categories -- or more poetically, that you are putting human order into the world with every glance you take at it!
 
 %\section{Epistemological considerations}
 
