Added a further paragraph to the section 'The role of consciousness'

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1028,6 +1028,8 @@ As it results from the preceding description of the processes taking place in th
 
 Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that physical processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any individual mind state $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the physical level. This inadequacy between our mental categories and the physical reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the physical reality (even a partial one), because physical reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current physical state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the physical state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the physical state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the physical reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the physical state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the physical reality according to its own mental categories -- or more poetically, that you are putting human order into the world with every glance you take at it!
 
+In the quantum measurement example given in section \ref{Quantum measurement}, for instance, the quantum superposition of two physical states of the brain of the observer, having either observed the photodetector activated or not, resolves to one of the components corresponding to the mental categories `I have seen the photodetector activated' and `I haven't seen it activated yet'. Because the physical state of the rest of the universe (here specifically the photodetector and the decaying atom) is correlated to the physical state of the brain via sensory perception, this reduction of the physical state of the universe to a given mental category will have consequences for the rest of the universe, too. For instance, if the observer makes the conscious experience of seeing the photodetector activated, the state of the photodetector will reduce too to the activated state only, because the unactivated state is only correlated to the component of the state of the brain corresponding to the mental category `I haven't seen the photodetector activated yet', which has been dropped. So the mental categories, which only concern the physical state of the brain originally, get transposed to external objects via the correlation induced by sensory perception between them and the brain in the physical state $\ket \Psi$ of the universe. Similarly, the state of the decaying atom will also reduce to the decayed state because the non-decayed state is only correlated to the component of the state of the brain corresponding to the mental category `I haven't seen the photodetector activated yet'.
+
 %\section{Epistemological considerations}
 
 %\section{The Spinozist approach to Quantum Physics}
