Stylistic correction in the preface

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -279,7 +279,7 @@ I would also like to thank my colleague Markus Matteucci for initiating me into 
 
 This book has been written with the main concern of providing the scientific community with a mean of building a bridge between physicists and philosophers in the field of Quantum Physics. It defines a common language to describe the realm of our experience of the world and I truly hope that this new language will find a large audience in both communities. For physicists, it stresses the importance of developing a well-defined mathematical formalism for Quantum Field Theory, since this is the necessary condition for philosophers to identify the underlying ontology, which builds the base of every philosophical discourse on the implications of Quantum Physics. The development of a coherent, convincing discourse by philosophers builds in turn the ground on which every conceptually and technically correct vulgarization effort can foot, and contributes thereby to broaden the popularity and acceptance of Quantum Physics through the whole society and especially among prospective students. Philosophers, on the other hand, gain a mean of confronting their ideas with the latest insights into fundamental physics, of expressing these ideas in terms of naturalistically grounded metaphysics and of articulating speculative thoughts in the uncertainty zones remaining within the physical theory itself or inherent to it.
 
-The careful reader already familiar with Quantum Physics will find here the very first mathematically well-defined formulation of Quantum Field Theory coming along with an intellectually satisfactory interpretation, perfectly capable of explaining all known quantum phenomena, and I am very pleased to present it to your curiosity today! However, although you will find, in the first edition of this book, all the main ideas I wanted to develop here, there still are a few areas which I couldn't find the time to develop to the extend they would have deserved yet. For instance, I do consider the formulation of Quantum Field Theory presented in this book, which is essentially a lattice regularization, as an acceptable fundamental theory, although it obviously lacks to respect the heuristical principles of Gauge and Poincaré invariance on which any textbook introduction to Quantum Field Theory relies. I included a few calculation examples in order to demonstrate that, at usual energy and distance scales, the resulting physics is the same as expected, but it would have been useful, to convince the skeptical reader, to add a classical renormalization example, a treatment of the weak and strong interactions as well as of the Higgs mechanism and of some gravitational model. The philosophical aspects of this book might have deserved a more extensive treatment, too. I have given a few basic examples to show how the physical theory can be used as a reference language in order to express philosophical questions, but I would have to add more various examples to give an adequate idea of the potential of this method.
+The careful reader already familiar with Quantum Physics will find here the very first mathematically well-defined formulation of Quantum Field Theory coming along with an intellectually satisfactory interpretation, perfectly capable of explaining all known quantum phenomena, and I am very pleased to present it to your curiosity today! However, although you will find, in the first edition of this book, all the main ideas I wanted to develop here, there still are a few areas which I couldn't yet find the time to develop to the extend they would have deserved. For instance, I do consider the formulation of Quantum Field Theory presented in this book, which is essentially a lattice regularization, as an acceptable fundamental theory, although it obviously lacks to respect the heuristical principles of Gauge and Poincaré invariance on which any textbook introduction to Quantum Field Theory relies. I included a few calculation examples in order to demonstrate that, at usual energy and distance scales, the resulting physics is the same as expected, but it would have been useful, to convince the skeptical reader, to add a classical renormalization example, a treatment of the weak and strong interactions as well as of the Higgs mechanism and of some gravitational model. The philosophical aspects of this book might have deserved a more extensive treatment, too. I have given a few basic examples to show how the physical theory can be used as a reference language in order to express philosophical questions, but I would have to add more various examples to give an adequate idea of the potential of this method.
 
 I am preparing a second, augmented edition of this work so that the ideas presented here become more explicit and accessible to a broader public. For the time being, I wish you a fruitful and enjoyable reading as well as long hours of delightful meditation!
 
